[Add] Training Bit ordering within a Skill

--- a/scss/skill_edit.scss
+++ b/scss/skill_edit.scss
@@ -8,19 +8,22 @@
     border: 1px solid black;
     margin-bottom: 0.3rem;
   }
-  .container {
+  ul.trainingbits-chooser-list {
     height: 6rem;
     overflow-x: hidden;
     overflow-y: auto;
     background-color: $gcl-lightgray;
 
-    ul.list {
-        li { list-style: none; }
-        input {
-          margin-right: 0.6rem;
-          width: 1.7rem;
-          height: 1.7rem;
-        }
+    &#trainingbits-available-list {
+      color: $gcl-midgray;
+    }
+
+    li {
+      list-style: none;
+      &.show-drag-position {
+        // background-color: white;
+        border: 1px solid black;
+      }
     }
   }
 }
