--- a/scss/app.scss
+++ b/scss/app.scss
@@ -17,6 +17,7 @@
 @import "scss/comments";
 @import "scss/skills";
 @import "scss/skill_edit";
+@import "scss/topics";
 @import "scss/profile";
 @import "scss/user_progress";
 
