--- a/skills/templates/skills/trainingbit_edit.html
+++ b/skills/templates/skills/trainingbit_edit.html
@@ -61,14 +61,11 @@
   </div>
   <div class="input-field-row">
     <div class="input-field">
-      <input type="text" name="tags" placeholder="organisation politics planning ..." value="{{ tags }}">
+      {% include 'skills/partials/topic_selector.html' %}
     </div>
     <div class="help-text">
-      <h6>Tags</h6>
-      Here you can add tags to your training bit. Each tag is separated by a
-      space.
-      If your tag contains a space it should be wrapped in quotes, like this:
-      "political science"
+      <h6>Topics</h6>
+      Here you can add topics to the training bit.
     </div>
   </div>
   <button id="training-bit-submit" type="submit">
