--- a/scss/new_user.scss
+++ b/scss/new_user.scss
@@ -28,3 +28,34 @@ div#new-user-greeter {
   }
 }
 
+
+#topics-select {
+  ul {
+    list-style: none;
+    li {
+      display: inline-block;
+      width: 30%;
+      label {
+        line-height: 1;
+      }
+      input[type="checkbox"] {
+        margin: 0;
+      }
+    }
+  }
+  button { float: right; }
+}
+
+.centered-message {
+  text-align: center;
+}
+
+#new-user-suggestions {
+  @include grid-row();
+
+  h1 {
+    text-align: center;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+}
