--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -66,7 +66,7 @@ $page-buttons-overlay: absolute;
 // We use these as default colors throughout
 // $primary-color: #008CBA;
 // $secondary-color: #e7e7e7;
-// $alert-color: #f04124;
+$alert-color: $gcl-red; //#f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
@@ -1145,8 +1145,9 @@ $h6-font-size: rem-calc(16px);
 
 // We use these to style anchors
 // $anchor-text-decoration: none;
-// $anchor-font-color: $primary-color;
-// $anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
+$anchor-font-color: black; // $primary-color;
+$anchor-font-color-hover: $gcl-red;
+// $anchor-font-color-hover: scale-color($anchor-font-color, $lightness: +40%); // scale-color($primary-color, $lightness: -14%);
 
 // We use these to style the <hr> element
 // $hr-border-width: 1px;
