--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -117,11 +117,12 @@
       <div class="row" id="footer-links">
         <div class="large-4 columns">
           <h6>About Global Change Lab</h6>
-          <a href="#">Terms of service</a>
-          <a href="#">about us</a>
-          <a href="#">read our blog</a>
-          <a href="#">Help and support</a>
-          <a href="#">Contact</a>
+
+          {% load flatpages %}
+          {% get_flatpages as flatpages %}
+          {% for page in flatpages %}
+            <a href="{% url 'django.contrib.flatpages.views.flatpage' page.url %}">{{ page.title }}</a>
+          {% endfor %}
         </div>
         <div class="large-4 columns">
           <h6>Training extras</h6>
