--- a/global_change_lab/templates/partials/project_list.html
+++ b/global_change_lab/templates/partials/project_list.html
@@ -2,19 +2,7 @@
 <div id="project-list">
 {% if projects %}
 {% for project in projects %}
-  <div class="project" id="project-{{ project.id }}">
-    {% if not hide_links %}<a href="{{ project.get_absolute_url }}">{% endif %}
-      <h6 class="title">{{ project.title }}</h6><span class="date">{{ project.created_at }}</span>
-    {% if not hide_links %}</a>{% endif %}
-
-    {% if not hide_user %}
-      <div class="profile-image"><span class="icon user"></span></div><a href="{% url 'profile' project.author.id %}"class="author">{{ project.author.username }}</a>
-    {% endif %}
-    <p>{{ project.content }}</p>
-    {% if project.image %}
-    <a href="{{ project.image.url }}"><img src="{{ project.image.url }}"></a>
-    {% endif %}
-  </div>
+  {% include 'partials/project_entry.html' %}
 {% endfor %}
 {% else %}
   <div class="message-missing">No projects yet</div>
