[Add] django-inplaceedit for inline editing on the profile page

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -25,6 +25,11 @@
     }
   </script>
   
+
+  {# {% django-inplaceedit %} #}
+  {% load inplace_edit %}
+  {% inplace_static %}
+
   {% block scripts %}
   {% endblock %}
   <link rel="stylesheet" href="{% static 'global_change_lab/css/app.css' %}" />
