[Design Hack] Make "act" section have full width in a training bit
... so that the gray background color of the section covers the full
width of the window. The content column of the page is constrained to
1000px by Foundation 5. The break out of this, and that requires
somewhat of a hack. (negative margins)

--- a/scss/trainingbit_view.scss
+++ b/scss/trainingbit_view.scss
@@ -1,12 +1,17 @@
 
+body.trainingbit-view {
+  overflow-x: hidden; // HACK #fullwidth-bg
 }
 
 .trainingbit {
   h1 {
-    @extend %text-white-on-red;
+    @extend %text-white-on-darkgray;
   }
 
   .trainingbit-section {
+    padding-top: rem-calc(20px);
+    padding-bottom: rem-calc(20px);
+
     &>ul {
       margin-left: 0;
 
@@ -17,6 +22,10 @@
 
     &#act {
       background-color: $gcl-lightgray;
+      margin-left:-100%;   // HACK #fullwidth-bg
+      padding-left: 100%;  // HACK #fullwidth-bg
+      margin-right:-100%;  // HACK #fullwidth-bg
+      padding-right: 100%; // HACK #fullwidth-bg
     }
   }
 }
