--- a/global_change_lab/templates/admin_dashboard.html
+++ b/global_change_lab/templates/admin_dashboard.html
@@ -23,9 +23,17 @@
         </div>
       </div>
       <div class="large-6 columns">
+        <h6>Number of users signing up during last week</h6>
+        <div id="admin-datablock">
+          <p>Last week there were {{ num_users_last_week }} users signing up.</p>
+        </div>
         <h6>Number of users signing up during last month</h6>
         <div id="admin-datablock">
           <p>Last month there were {{ num_users_last_month }} users signing up.</p>
+        </div>
+        <h6>Number of users signing up during last year</h6>
+        <div id="admin-datablock">
+          <p>Last year there were {{ num_users_last_year }} users signing up.</p>
         </div>
       </div>
     </div>
