[Add] Custom comments + "large" model overhaul
+ Remove the old comments system (django.contrib.comments and
django-comments-xtd) to be replaced by our own custom comments model.
+ Change `Project.title` to `Project.name` for consistency with our
other models. (Topic, TrainingBit, Skill ...)
+ Add `author` field to Topic (for consistency)
+ Add `created_at`, `updated_at` to all models in the skills app

--- a/global_change_lab/templates/partials/project_entry.html
+++ b/global_change_lab/templates/partials/project_entry.html
@@ -1,8 +1,7 @@
-{% load comments %}
 
 <div class="project" id="project-{{ project.id }}">
   {% if not hide_links %}<a href="{{ project.get_absolute_url }}">{% endif %}
-    <h6 class="title">{{ project.title }}</h6><span class="date">{{ project.created_at }}</span>
+    <h6 class="title">{{ project.name }}</h6><span class="date">{{ project.created_at }}</span>
   {% if not hide_links %}</a>{% endif %}
 
   {% if not hide_user %}
@@ -14,7 +13,15 @@
   {% endif %}
   {% if not hide_comments %}
     {# Comments section #}
-    {% render_comment_list for project %}
-    {% render_comment_form for project %}
+    {% include 'skills/partials/comment_list.html' with comments=project.comment_set.all %}
+    <a href="#">Comment on this project</a>
+    <div >
+      <form action="{% url 'skills:comment_post' %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="project" value="{{ project.pk }}">
+        <textarea name="text"></textarea>
+        <button>Comment</button>
+      </form>
+    </div>
   {% endif %}
 </div>
