[Fix] Comment in bottom of trainingbit_cover.html

--- a/skills/templates/skills/trainingbit_cover.html
+++ b/skills/templates/skills/trainingbit_cover.html
@@ -23,10 +23,11 @@
     </ul>
   </div>
 </div>
+{% comment %}
 <div class="row">
   <h2>Related training bits</h2>
-  {#{% include 'skills/partials/trainingbit_grid.html' with
-  skills=trainingbit.skill_set.all %}#}
+  {#{% include 'skills/partials/trainingbit_grid.html' with skills=trainingbit.skill_set.all %}#}
 </div>
+{% endcomment %}
 
 {% endblock %}
