[Design] Login page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -18,6 +18,7 @@
 @import "scss/skills";
 @import "scss/skill_edit";
 @import "scss/topics";
+@import "scss/login_signup";
 @import "scss/profile";
 @import "scss/user_progress";
 
