--- a/skills/templates/skills/partials/skill_list_large.html
+++ b/skills/templates/skills/partials/skill_list_large.html
@@ -11,7 +11,7 @@
     </div>
     <div class="description small-9 columns">
       <a href="{% url 'skills:skill_view' skill.id %}"><h2>{{skill.name}}</h2></a>
-      <p>{{skill.description}}</p>
+      <p>{{skill.description|truncatechars:170}}</p>
       <div class="info">
         <span class="metadata">{{ skill.trainingbits.count }} Training Bits</span>
         <hr>
